# codie

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
demo/: CMakeLists.txt
demo/src/: demo.ixx
src/: codie.ixx
src/json/: decoding.ixx  encoding.ixx  json.ixx  object.ixx  tokens.ixx
src/json/meta/: meta.ixx
